--- a/app2/manifest.yaml
+++ b/app2/manifest.yaml
@@ -23,7 +23,8 @@ spec:
       containers:
       - name: app2
         image: nagamanimuvva/app2:v1.0
----apiVersion: v1
+---
+apiVersion: v1
 kind: Service
 metadata: 
   name: nginx-service
