--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -23,7 +23,8 @@ spec:
       containers:
       - name: app1
         image: nagamanimuvva/app-1:v1.0
----apiVersion: v1
+---
+apiVersion: v1
 kind: Service
 metadata: 
   name: nginx-service
