adding ingress apps

--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -1,60 +1,59 @@
-apiVersion: apps/v1
 kind: Deployment
+apiVersion: apps/v1
 metadata:
-  name: app-1deployment
+  name: app1
+  # these labels are deployment related labels
   labels:
-    app: app-1
-    component: nginx
-  #these labels belong to deployment set resource
+    app: app1
+    purpose: ingress
 spec:
-  replicas: 1 #specify no. of pods, as per our requirement
-  selector: #select the pods with these labels
+  selector:
     matchLabels:
-      component: nginx
-      app: app-1
-    #below mentioned code refers to pod definition
+      app: app1
+      purpose: ingress
+  # pod definition
   template:
     metadata:
       labels:
-        component: nginx
-        app: app-1
-        project: expense
+        app: app1
+        purpose: ingress
     spec:
       containers:
       - name: app1
-        image: nagamanimuvva/app1:v1.0
+        image: joindevops/app1:1.0
 ---
 apiVersion: v1
 kind: Service
-metadata: 
+metadata:
   name: app1
 spec:
   selector:
-    component: nginx
-    app: app-1
+    app: app1
+    purpose: ingress
   ports:
-    - protocol: TCP
-      port: 80   #service port
-      targetPort: 80  #pod port
+  - protocol: TCP
+    port: 80 #service-port
+    targetPort: 80 #target-port
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress
-annotations:
-        alb.ingress.kubernetes.io/scheme: internet-facing
-        alb.ingress.kubernetes.io/target-type: ip
-        alb.ingress.kubernetes.io/group.name: muvva.online
-        alb.ingress.kubernetes.io/tags: Env:Dev, Purpose:Testing  
+  name: app1
+  annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
+    alb.ingress.kubernetes.io/group.name: joindevops
 spec:
+  ingressClassName: alb
   rules:
-    - host: "app1.muvva.online" #ALB rule
+  - host: "app1.daws78s.online" # ALB Rule
     http:
       paths:
       - pathType: Prefix
         path: "/"
         backend:
           service:
-            name: app1    #ALB target group
+            name: app1 # ALB Target group
             port:
               number: 80
